--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Google Search Lite</title>
-
-<!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-
 <style>
   body {
     font-family: 'Roboto', Arial, sans-serif;
@@ -27,31 +24,20 @@
     margin-bottom: 40px;
   }
 
-  form {
-    margin: 0 auto 40px auto;
-    max-width: 600px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  #query {
+    width: 90%;
+    max-width: 400px;
+    padding: 10px 20px;
+    font-size: 18px;
+    border: 1px solid #dfe1e5;
+    border-radius: 24px;
+    outline: none;
+    box-shadow: 0 1px 6px rgba(32,33,36,.28);
+    font-family: 'Roboto', Arial, sans-serif;
+    margin-bottom: 20px;
   }
 
-input[type="text"] {
-  width: 90%;          /* almost full width but not huge */
-  max-width: 400px;    /* limit width on wider screens */
-  padding: 10px 20px;
-  font-size: 18px;
-  border: 1px solid #dfe1e5;
-  border-radius: 24px;
-  outline: none;
-  box-shadow: 0 1px 6px rgba(32,33,36,.28);
-  font-family: 'Roboto', Arial, sans-serif;
-  margin: 0 auto;      /* center input */
-  display: block;
-}
-
-
-  button {
-    margin-top: 20px;
+  #search-button {
     padding: 10px 20px;
     font-size: 16px;
     border: none;
@@ -60,52 +46,19 @@ input[type="text"] {
     cursor: pointer;
     box-shadow: 0 1px 2px rgba(32,33,36,.28);
     font-family: 'Roboto', Arial, sans-serif;
+    margin-bottom: 30px;
   }
 
   #results {
     max-width: 650px;
-    margin: 30px auto;
+    margin: 0 auto;
     text-align: left;
   }
 
   .result {
-    margin-bottom: 20px;
-    padding-bottom: 15px;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
     border-bottom: 1px solid #e0e0e0;
-  }
-
-  .result a {
-    color: #1a0dab;
-    font-size: 18px;
-    text-decoration: none;
-  }
-
-  .result a:hover {
-    text-decoration: underline;
-  }
-
-  .snippet {
-    font-size: 14px;
-    color: #4d5156;
-    margin-top: 4px;
-  }
-
-  .url {
-    font-size: 13px;
-    color: #006621;
-  }
-
-  #pagination {
-    margin: 20px 0;
-    display: none; /* hidden until search done */
-  }
-
-  #pagination button {
-    margin: 0 5px;
-    border-radius: 4px;
-    padding: 8px 14px;
-    font-size: 16px;
-    font-family: 'Roboto', Arial, sans-serif;
   }
 
   footer {
@@ -113,6 +66,18 @@ input[type="text"] {
     font-size: 12px;
     color: #70757a;
     padding-bottom: 30px;
+  }
+
+  #pagination {
+    margin: 20px 0;
+    display: none;
+  }
+
+  #pagination button {
+    margin: 0 5px;
+    padding: 8px 14px;
+    font-size: 16px;
+    font-family: 'Roboto', Arial, sans-serif;
   }
 </style>
 </head>
@@ -122,7 +87,7 @@ input[type="text"] {
   <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google Logo">
 </header>
 
-<input type="text" id="query" placeholder="Search query..." />
+<input type="text" id="query" placeholder="Search query..."><br>
 <button id="search-button">Search</button>
 
 <div id="results"></div>
@@ -136,69 +101,82 @@ input[type="text"] {
 </footer>
 
 <script>
-const API_KEY = 'AIzaSyBWt_Ro_232tB77nnOswu1dE8NrJK7Kr7s';   
-const CSE_ID = '101dd4ea922d245aa'; 
-
+const API_KEY = 'AIzaSyBWt_Ro_232tB77nnOswu1dE8NrJK7Kr7s';   // Replace with your API key 
+const CSE_ID = '101dd4ea922d245aa';     // Replace with your CSE ID
 let currentQuery = '';
 let startIndex = 1;
 
-function search(query) {
+const resultsDiv = document.getElementById('results');
+const paginationDiv = document.getElementById('pagination');
+const prevBtn = document.getElementById('prev');
+const nextBtn = document.getElementById('next');
+
+// 3DS-safe onclick search
+document.getElementById('search-button').onclick = function() {
+  const query = document.getElementById('query').value.trim();
+  if (!query) return;
   currentQuery = query;
+  startIndex = 1;
+  search(currentQuery);
+};
+
+// Pagination
+prevBtn.onclick = function() {
+  if (startIndex > 1) {
+    startIndex -= 10;
+    search(currentQuery);
+  }
+};
+
+nextBtn.onclick = function() {
+  startIndex += 10;
+  search(currentQuery);
+};
+
+// JSONP search
+function search(query) {
+  paginationDiv.style.display = 'none';
+  resultsDiv.innerHTML = '<p>Loading...</p>';
+
   const script = document.createElement('script');
   script.src = `https://www.googleapis.com/customsearch/v1?key=${API_KEY}&cx=${CSE_ID}&q=${encodeURIComponent(query)}&start=${startIndex}&callback=handleResults`;
   document.body.appendChild(script);
 }
 
+// Callback for JSONP
 function handleResults(data) {
-  const resultsDiv = document.getElementById('results');
-  const paginationDiv = document.getElementById('pagination');
+  const items = data.items || [];
+  renderResults(items);
   paginationDiv.style.display = 'block';
+  prevBtn.disabled = startIndex <= 1;
+  nextBtn.disabled = !items.length || items.length < 10;
+}
 
-  if (!data.items || data.items.length === 0) {
+// Your requested renderResults style
+function renderResults(items) {
+  if (!items || items.length === 0) {
     resultsDiv.innerHTML = '<p>No results found.</p>';
     return;
   }
 
   resultsDiv.innerHTML = '';
 
-  data.items.forEach(item => {
+  items.forEach(item => {
     const div = document.createElement('div');
     div.classList.add('result');
-    div.style.marginBottom = '30px';
+    div.style.marginBottom = '10px';
+    div.style.paddingBottom = '10px';
     div.style.borderBottom = '1px solid #e0e0e0';
+
     div.innerHTML = `
-      <a href="${item.link}" style="font-size:18px; color:#1a0dab; text-decoration:none; display:block; margin-bottom:4px; line-height:1.3;">${item.title}</a>
-      <div class="url" style="font-size:14px; color:#006621; margin-bottom:8px; line-height:1.3;">${item.displayLink}</div>
-      <div class="snippet" style="font-size:14px; color:#4d5156; line-height:1.5;">${item.snippet}</div>
+      <a href="${item.link}" style="font-size:18px; color:#1a0dab; text-decoration:none; display:block; margin-bottom:2px;">${item.title}</a>
+      <div class="url" style="font-size:14px; color:#006621; margin-bottom:5px;">${item.displayLink}</div>
+      <div class="snippet" style="font-size:14px; color:#4d5156;">${item.snippet}</div>
     `;
+
     resultsDiv.appendChild(div);
   });
-
-  document.getElementById('prev').disabled = startIndex <= 1;
-  document.getElementById('next').disabled = !data.items || data.items.length < 10;
 }
-
-// Button click
-document.getElementById('search-button').onclick = function() {
-  const query = document.getElementById('query').value.trim();
-  if (!query) return;
-  startIndex = 1;
-  search(query);
-};
-
-// Pagination buttons
-document.getElementById('prev').onclick = function() {
-  if (startIndex > 1) {
-    startIndex -= 10;
-    search(currentQuery);
-  }
-};
-document.getElementById('next').onclick = function() {
-  startIndex += 10;
-  search(currentQuery);
-};
-
-
 </script>
 
 </body>
