--- a/index.html
+++ b/index.html
@@ -2,194 +2,243 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Google Search Lite</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
 <style>
 body {
-  font-family: 'Roboto', Arial, sans-serif;
-  background: #fff;
-  color: #202124;
-  margin: 0;
-  padding: 0;
-  text-align: center;
+  font-family: Roboto, Arial, sans-serif;
+  background:#fff;
+  color:#202124;
+  margin:0;
+  padding:0;
+  text-align:center;
 }
 
+/* Header */
 header {
-  margin-top: 80px;
+  margin-top:70px;
 }
-
 header img {
-  width: 272px;
-  margin-bottom: 40px;
+  width:272px;
+  margin-bottom:30px;
 }
 
-#query {
-  width: 90%;
-  max-width: 400px;
-  padding: 10px 20px;
-  font-size: 18px;
-  border: 1px solid #dfe1e5;
-  border-radius: 24px;
-  outline: none;
-  box-shadow: 0 1px 6px rgba(32,33,36,.28);
-  margin-bottom: 20px;
+/* Search */
+.search-box {
+  max-width:400px;
+  margin:0 auto 30px auto;
 }
 
-#search-button {
-  padding: 10px 20px;
-  font-size: 16px;
-  border: none;
-  border-radius: 4px;
-  background-color: #f8f9fa;
-  cursor: pointer;
-  box-shadow: 0 1px 2px rgba(32,33,36,.28);
-  margin-bottom: 30px;
+#searchbox {
+  width:100%;
+  padding:10px 16px;
+  font-size:18px;
+  border:1px solid #dfe1e5;
+  border-radius:24px;
+  outline:none;
+  font-family: Roboto, Arial, sans-serif;
 }
 
-#results {
-  max-width: 650px;
-  margin: 0 auto;
-  text-align: left;
+#searchbtn {
+  margin-top:20px;
+  padding:10px 22px;
+  font-size:16px;
+  background:#f8f9fa;
+  border:1px solid #dadce0;
+  border-radius:4px;
+  cursor:pointer;
+  font-family: Roboto, Arial, sans-serif;
 }
 
-.result {
-  margin-bottom: 10px;
-  padding-bottom: 10px;
-  border-bottom: 1px solid #e0e0e0;
+/* Results */
+.gcse-searchresults-only {
+  max-width:650px;
+  margin:0 auto;
+  text-align:left;
 }
 
-#pagination {
-  margin: 20px 0;
-  display: none;
+.gsc-webResult {
+  margin-bottom:12px !important;
+  padding-bottom:12px !important;
+  border-bottom:1px solid #e0e0e0 !important;
 }
 
-#pagination button {
-  margin: 0 5px;
-  padding: 8px 14px;
-  font-size: 16px;
+.gs-title a {
+  font-size:18px !important;
+  color:#1a0dab !important;
+  text-decoration:none !important;
 }
 
+.gs-title a:hover {
+  text-decoration:underline !important;
+}
+
+.gs-visibleUrl {
+  font-size:14px !important;
+  color:#006621 !important;
+  margin-bottom:4px !important;
+}
+
+.gs-snippet {
+  font-size:14px !important;
+  color:#4d5156 !important;
+}
+
+/* Pagination */
+.gsc-cursor-box {
+  text-align:center !important;
+  margin-top:20px !important;
+}
+
+.gsc-cursor-page {
+  padding:8px 14px !important;
+  margin:0 5px !important;
+  border-radius:4px !important;
+  border:1px solid #dadce0 !important;
+  background:#f8f9fa !important;
+  cursor:pointer !important;
+}
+
+/* Footer */
 footer {
-  margin-top: 50px;
-  font-size: 12px;
-  color: #70757a;
-  padding-bottom: 30px;
+  margin-top:50px;
+  font-size:12px;
+  color:#70757a;
+  padding-bottom:30px;
 }
+    
+/* ---- Titles ---- */
+.gsc-webResult .gs-title a,
+.gsc-webResult .gs-title a * {
+  font-family: Roboto, Arial, sans-serif !important;
+  font-size: 18px !important;
+  color: #1a0dab !important;
+  font-weight: 400 !important;
+  text-decoration: none !important;
+}
+
+/* ---- Snippets ---- */
+.gsc-webResult .gs-snippet,
+.gsc-webResult .gs-snippet * {
+  font-family: Roboto, Arial, sans-serif !important;
+  font-size: 14px !important;
+  color: #4d5156 !important;
+  font-weight: 400 !important;
+  line-height: 1.58 !important;
+}
+
+/* ---- URLs ---- */
+.gsc-webResult .gs-visibleUrl,
+.gsc-webResult .gs-visibleUrl * {
+  font-family: Roboto, Arial, sans-serif !important;
+  font-size: 14px !important;
+  color: #006621 !important;
+  font-weight: 400 !important;
+}
+
+/* ---- Kill bold without shrinking ---- */
+.gsc-webResult b,
+.gsc-webResult strong {
+  font-weight: 400 !important;
+  color: inherit !important;
+  font-size: inherit !important;
+}
+
+/* ---- Pagination text ---- */
+.gsc-cursor-page,
+.gsc-cursor-current-page {
+  font-family: Roboto, Arial, sans-serif !important;
+  font-weight: 400 !important;
+}
+    
+/* Remove all bottom Google branding */
+.gcsc-more-maybe-branding-root {
+  display: none !important;
+  height: 0 !important;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+
 </style>
 </head>
 
 <body>
 
 <header>
-  <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google Logo">
+  <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google">
 </header>
 
-<input type="text" id="query" placeholder="Search query..."><br>
-<button id="search-button" onclick="searchgoogle()">Search</button>
+<form class="search-box" onsubmit="doSearch(); return false;">
+  <input id="searchbox" type="text" placeholder="Search Google">
+  <button id="searchbtn" type="submit">Google Search</button>
+</form>
 
-<div id="results"></div>
+<div class="gcse-searchresults-only"></div>
 
-<div id="pagination">
-  <button onclick="prevPage()">Previous</button>
-  <button onclick="nextPage()">Next</button>
-</div>
-
-<footer>
-  © 2025 Google
-</footer>
+<footer>© 2025 Google</footer>
 
 <script>
-/* ===== CONFIG ===== */
-var API_KEY = 'AIzaSyBWt_Ro_232tB77nnOswu1dE8NrJK7Kr7s';
-var CSE_ID  = '101dd4ea922d245aa';
-
-/* ===== STATE ===== */
-var currentQuery = '';
-var startIndex = 1;
-
-/* ===== SEARCH ===== */
-function searchgoogle() {
-  var q = document.getElementById('query').value;
+/* --- Submit search --- */
+function doSearch() {
+  var q = document.getElementById('searchbox').value;
   if (!q) return;
 
-  currentQuery = q;
-  startIndex = 1;
-  doSearch();
+  location.href =
+    '?q=' + encodeURIComponent(q) +
+    '#gsc.tab=0&gsc.q=' + encodeURIComponent(q) +
+    '&gsc.page=1';
 }
 
-function doSearch() {
-  document.getElementById('results').innerHTML = 'Loading...';
-  document.getElementById('pagination').style.display = 'none';
+/* --- Fill input from ?q= --- */
+(function () {
+  var m = location.search.match(/[?&]q=([^&]+)/);
+  if (m) {
+    document.getElementById('searchbox').value =
+      decodeURIComponent(m[1].replace(/\+/g,' '));
+  }
+})();
+</script>
 
+<script>
+/* --- Sync input with CSE (polling) --- */
+(function () {
+  var lastQ = null;
+
+  function getGscQuery() {
+    var h = location.hash;
+    var m = h.match(/gsc\.q=([^&]+)/);
+    if (m) {
+      return decodeURIComponent(m[1].replace(/\+/g,' '));
+    }
+    return null;
+  }
+
+  function syncInput() {
+    var q = getGscQuery();
+    if (q && q !== lastQ) {
+      lastQ = q;
+      var box = document.getElementById('searchbox');
+      if (box) box.value = q;
+    }
+  }
+
+  syncInput();
+  setInterval(syncInput, 300);
+})();
+</script>
+
+<script>
+/* --- Load CSE --- */
+(function () {
+  var cx = '101dd4ea922d245aa';
   var s = document.createElement('script');
-  s.src =
-    'https://www.googleapis.com/customsearch/v1' +
-    '?key=' + API_KEY +
-    '&cx=' + CSE_ID +
-    '&q=' + encodeURIComponent(currentQuery) +
-    '&start=' + startIndex +
-    '&callback=handleResults';
-
+  s.async = true;
+  s.src = 'https://cse.google.com/cse.js?cx=' + cx;
   document.body.appendChild(s);
-}
-
-/* ===== PAGINATION ===== */
-function prevPage() {
-  if (startIndex > 1) {
-    startIndex -= 10;
-    doSearch();
-  }
-}
-
-function nextPage() {
-  startIndex += 10;
-  doSearch();
-}
-
-/* ===== CALLBACK ===== */
-function handleResults(data) {
-  var items = data.items;
-  renderResults(items);
-
-  if (items && items.length) {
-    document.getElementById('pagination').style.display = 'block';
-  }
-}
-
-/* ===== RENDER ===== */
-function renderResults(items) {
-  var resultsDiv = document.getElementById('results');
-
-  if (!items || items.length === 0) {
-    resultsDiv.innerHTML = 'No results found.';
-    return;
-  }
-
-  resultsDiv.innerHTML = '';
-
-  for (var i = 0; i < items.length; i++) {
-    var item = items[i];
-    var div = document.createElement('div');
-    div.className = 'result';
-
-    div.innerHTML =
-      '<a href="' + item.link + '" ' +
-      'style="font-size:18px;color:#1a0dab;text-decoration:none;display:block;margin-bottom:2px;">' +
-      item.title +
-      '</a>' +
-      '<div style="font-size:14px;color:#006621;margin-bottom:5px;">' +
-      item.displayLink +
-      '</div>' +
-      '<div style="font-size:14px;color:#4d5156;">' +
-      item.snippet +
-      '</div>';
-
-    resultsDiv.appendChild(div);
-  }
-}
+})();
 </script>
 
 </body>
