--- a/index.html
+++ b/index.html
@@ -160,9 +160,27 @@ footer {
   margin: 0 !important;
   padding: 0 !important;
 }
+/* Hide mobile "Search for ... on Google" suggestion */
+.gcsc-find-more-on-google-text,
+.gcsc-find-more-on-google-query {
+  display: none !important;
+}
 
+/* Hide the Google branding / logo below results */
+.gcsc-branding {
+  display: none !important;
+  height: 0 !important;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+/* Hide mobile "Search for ... on Google" suggestion */
+.gcsc-find-more-on-google-text,
+.gcsc-find-more-on-google-query {
+  display: none !important;
+}
 
-</style>
+/* Hide the Google branding / logo below results */
+ </style>
 </head>
 
 <body>
