--- a/index.html
+++ b/index.html
@@ -179,7 +179,13 @@ footer {
   display: none !important;
 }
 
-/* Hide the Google branding / logo below results */
+/* Hide full mobile "Search for ... on Google" suggestion */
+.gcsc-find-more-on-google-root {
+  display: none !important;
+  height: 0 !important;
+  margin: 0 !important;
+  padding: 0 !important;
+}
  </style>
 </head>
 
